[gd_scene load_steps=4 format=3 uid="uid://xvld7tdd1xe4"]

[ext_resource type="Script" path="res://ui/player_ui.gd" id="1_cbyu2"]
[ext_resource type="Texture2D" uid="uid://ci3o857iqx563" path="res://spells/sprites/icons/blank_spell_icon.png" id="1_nkl1q"]
[ext_resource type="PackedScene" uid="uid://c8tisd7v43c66" path="res://ui/spell_slot.tscn" id="1_whj2e"]

[node name="PlayerUI" type="VBoxContainer"]
custom_minimum_size = Vector2(450, 190)
alignment = 1
script = ExtResource("1_cbyu2")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Stats" type="VBoxContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Spells" type="HBoxContainer" parent="HBox/Stats"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Spell0" parent="HBox/Stats/Spells" instance=ExtResource("1_whj2e")]
layout_mode = 2

[node name="Spell1" parent="HBox/Stats/Spells" instance=ExtResource("1_whj2e")]
layout_mode = 2

[node name="Spell2" parent="HBox/Stats/Spells" instance=ExtResource("1_whj2e")]
layout_mode = 2

[node name="HealthBar" type="TextureProgressBar" parent="HBox/Stats"]
custom_minimum_size = Vector2(300, 24)
layout_mode = 2
max_value = 1000.0
value = 1000.0
nine_patch_stretch = true
texture_under = ExtResource("1_nkl1q")
texture_progress = ExtResource("1_nkl1q")
tint_under = Color(0.32549, 0.32549, 0.32549, 1)
tint_progress = Color(0.992157, 0, 0.254902, 1)
